3/9 and about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@ Eyster Field Notes updates every day, unless we're in the field.
 <br>
 <div id="licenseText">
 <p>
-&copy Harold Eyster/Artemis Eyster
+&copy Harold Eyster/Artemis Eyster | <a href="./about" >About</a> | <a href="https://twitter.com/HaroldEyster" >Twitter</a> | <a href="https://instagram.com/eysterart" >Instagram</a> 
 <!-- <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
 <br />This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>. -->
 </p>
