fixing about alignment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 </div>
 <div id="topRight">
 <div id="masthead">
-<span><a href="http://fieldnotes.eyster.com/"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
+<span><a href="http://fieldnotes.eyster.com/about"><img src="../../../assets/profile.png" alt="Eyster picture" height="83" width="185"></a></span>
 <span id="slogan">Sketches of the nature <br> we see around us.</span>
 </div>
 <div id="news">
