--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@ Eyster Field Notes updates every day, unless we're in the field.
   {{page.label1}}
 	</div>
   <div class="column"> 
-  	<a href = "{{page.image2}}"><img src="{{page.image2}}"  title="{{page.mouse2}}" alt="image2"></a>
+  	<a href = "{{page.image2}}"><img src="{{page.image2}}"  title="{{page.mouse2}}" alt=></a>
 	<br>
 	{{page.label2}}
 	 </div>
