--- a/index_files/style.css
+++ b/index_files/style.css
@@ -1,6 +1,6 @@
 /* START GENERAL FORMAT */
 body{
-	background-color:#ABEBC6;
+	background-color:black;
 	text-align:center;
 	font-size:16px;
 	font-variant:small-caps;
