--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,12 @@
 /* START GENERAL FORMAT */
 
 body{
-	background-image: url("./bgd.jpg");
+	background-image: url("./bgd2.jpg");
 		no-repeat center center fixed; 
         -webkit-background-size: cover; 
         -moz-background-size: cover;
         -o-background-size: cover;
-        background-size: cover; 
+        background-size: cover;
 	 text-align:center; 
 	font-size:16px;
 	font-variant:small-caps;
@@ -31,13 +31,13 @@ img{
 	max-height:550px;
 	border:0;
 }
-.box { /*any of the box layouts & white backgrounds*/
-	background:white;
+.box { /*any of the box layouts & white backgrounds#071419*/ 
+	background:#c6ecc6;
 	border-style:solid;
 	border-width:1.5px;
-	border-color:#071419;
-	border-radius: 12px;
-	-moz-border-radius: 12px;
+	border-color:#008000;
+	/*border-radius: 12px;
+	-moz-border-radius: 12px;*/
 }
 /* END GENERAL FORMAT */
 /* START UPPER LAYOUT */
